# rc2017_1v1

./: .gitignore  CMakeLists.txt  README.md  UpDevice.cmake  arm-gcc-link.ld
UP_TestAll/: CheckState.c  Grayscale4Sensor.c  Grayscale4Sensor.h  ServoMove.c  ServoMove.h  UserAction01.c  UserAction01.h  common.h  main.c  user.c  utils.c  utils.h
UP_TestAll/UpLib/: UP_ADC.c  UP_ADC.h  UP_Beer.c  UP_Bluetooth.c  UP_Bluetooth.h  UP_CDS5500.c  UP_CDS5500.h  UP_Exti.c  UP_Exti.h  UP_Globle.c  UP_Globle.h  UP_IOout.c  UP_IOout.h  UP_Key.c  UP_Key.h  UP_LCD.c  UP_LCD.h  UP_Letters.h  UP_MP3.c  UP_NVIC.c  UP_PWM.c  UP_RFID.c  UP_System.c  UP_System.h  UP_Timer.c  UP_Timer.h  UP_UART.c  UP_UART_Parse.c  UP_USR232.c  UP_USR232.h  UP_VGA.c  UP_Variable.c  UP_Woody_ColorAndCode.c  UP_Woody_ImageRecognition.c  UP_Woody_ImageRecognition.h  UP_Woody_SpeechRecognition.c  UP_Woody_SpeechRecognition.h  UP_Woody_VoicePlaying.c  UP_Woody_VoicePlaying.h  UP_Zigbee.c  (+2 more)
UP_TestAll/User_main/: main_czy.c  main_gomi.c  main_hgw.c
UP_TestAll/Utils/: CheckState.c  CheckState.h  Grayscale4Sensor.c  Grayscale4Sensor.h  LedCheater.c  LedCheater.h  ServoMove.c  ServoMove.h  UserAction01.c  UserAction01.h  UserAction_czy.c  UserAction_czy.h  common.h  syscalls.c  user.c  user.h  utils.c  utils.h
